// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputLabel /> renders InputLabel with props 1`] = `
<label
  className="mfui-input-label"
  htmlFor="htmlFor"
>
  test
</label>
`;

exports[`<InputLabel /> renders InputLabel without props 1`] = `
<label
  className="mfui-input-label"
>
  test
</label>
`;
